force-app/main/default/objects/JBCXM__PickList__c/JBCXM__PickList__c.object-meta.xml
<CustomObject>
    <description>Utility object that stores the configurable look-up values that are used across the application.</description>
    <label>PickList</label>
    <nameField>
        <label>PickList Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PickList</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>