force-app/main/default/objects/JBCXM__PickList__c/fields/JBCXM__Attribute2__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Attribute2__c</fullName>
    <description>Extra field for feature use.</description>
    <label>Attribute2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>