force-app/main/default/objects/JBCXM__PickList__c/fields/JBCXM__Attribute4__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Attribute4__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Extra field for feature use.</description>
    <label>Attribute4</label>
    <type>Checkbox</type>
</CustomField>