force-app/main/default/objects/JBCXM__PickList__c/fields/JBCXM__DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DisplayOrder__c</fullName>
    <description>This order will be used while the PickList values are being used as lookup relations while creating other objects.</description>
    <inlineHelpText>The order in which the picklist item should appear in any list interface or drop down selection</inlineHelpText>
    <label>Display Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>