force-app/main/default/objects/JBCXM__PickList__c/fields/JBCXM__EntityType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__EntityType__c</fullName>
    <defaultValue>&quot;GLOBAL&quot;</defaultValue>
    <label>Entity Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>