force-app/main/default/objects/JBCXM__PickList__c/fields/JBCXM__IncludeInWidget__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IncludeInWidget__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include the fields in  widgets.</description>
    <inlineHelpText>Check if the field wants to include in widgets.</inlineHelpText>
    <label>Include In Widget</label>
    <type>Checkbox</type>
</CustomField>