force-app/main/default/objects/JBCXM__PickList__c/fields/JBCXM__IsSCMeasure__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsSCMeasure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Scorecard Measure</label>
    <type>Checkbox</type>
</CustomField>