force-app/main/default/objects/JBCXM__PickList__c/fields/JBCXM__MapToBookingType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__MapToBookingType__c</fullName>
    <description>This is used to associate the new transaction booking/order type to core types like New Business, Upsell, Downsell, Debook, etc. and this populated for only records of Category &quot;Order Type&quot;.</description>
    <label>Map to Booking Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>