force-app/main/default/objects/JBCXM__PickList__c/fields/JBCXM__ShortName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ShortName__c</fullName>
    <inlineHelpText>Provide short name for displaying in the widgets and graphs.</inlineHelpText>
    <label>Short Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>