force-app/main/default/objects/JBCXM__PickList__c/fields/JBCXM__SystemDefined__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SystemDefined__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Boolean value to indicate whether the record is system defined.</inlineHelpText>
    <label>System Defined</label>
    <type>Checkbox</type>
</CustomField>