force-app/main/default/objects/JBCXM__PickList__c/fields/JBCXM__UsageTrackingMeasure__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UsageTrackingMeasure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to decide to show usage tracking or not</description>
    <inlineHelpText>Check to activate / Uncheck to deactivate</inlineHelpText>
    <label>Usage Tracking Measure</label>
    <type>Checkbox</type>
</CustomField>